Update autogenerated code

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -9407,7 +9407,7 @@ spec:
                       - key
                       type: object
                     followRedirects:
-                      description: FollowRedirects Configure whether scrape requests
+                      description: FollowRedirects configures whether scrape requests
                         follow HTTP 3xx redirects.
                       type: boolean
                     honorLabels:
@@ -19040,7 +19040,7 @@ spec:
                       - key
                       type: object
                     followRedirects:
-                      description: FollowRedirects Configure whether scrape requests
+                      description: FollowRedirects configures whether scrape requests
                         follow HTTP 3xx redirects.
                       type: boolean
                     honorLabels:
