--- a/example/prometheus-operator-crd/monitoring.coreos.com_servicemonitors.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_servicemonitors.yaml
@@ -139,7 +139,7 @@ spec:
                       - key
                       type: object
                     followRedirects:
-                      description: FollowRedirects Configure whether scrape requests
+                      description: FollowRedirects configures whether scrape requests
                         follow HTTP 3xx redirects.
                       type: boolean
                     honorLabels:
