--- a/example/prometheus-operator-crd/monitoring.coreos.com_podmonitors.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_podmonitors.yaml
@@ -170,7 +170,7 @@ spec:
                       - key
                       type: object
                     followRedirects:
-                      description: FollowRedirects Configure whether scrape requests
+                      description: FollowRedirects configures whether scrape requests
                         follow HTTP 3xx redirects.
                       type: boolean
                     honorLabels:
