pkg/promcfg: Add support for follow_redirects in endpoints (#4563)
* pkg/promcfg: Add support for follow_redirects in endpoints

Closes https://github.com/prometheus-operator/prometheus-operator/issues/4557

* pkg/prometheus: use value as *bool

Also only add to configuration when value _is set_ and _is set to false_

* pkg/prometheus: Add check of version for follow_redirects

* chore: Working commit

* Update pkg/apis/monitoring/v1/types.go

Co-authored-by: Simon Pasquier <spasquie@redhat.com>

* Add tests for follow_redirects

* Update comment

* Always set the `follow_redirects` and update the tests

* Update autogenerated code

Co-authored-by: Simon Pasquier <spasquie@redhat.com>

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -9406,6 +9406,10 @@ spec:
                       required:
                       - key
                       type: object
+                    followRedirects:
+                      description: FollowRedirects configures whether scrape requests
+                        follow HTTP 3xx redirects.
+                      type: boolean
                     honorLabels:
                       description: HonorLabels chooses the metric's labels on collisions
                         with target labels.
@@ -19035,6 +19039,10 @@ spec:
                       required:
                       - key
                       type: object
+                    followRedirects:
+                      description: FollowRedirects configures whether scrape requests
+                        follow HTTP 3xx redirects.
+                      type: boolean
                     honorLabels:
                       description: HonorLabels chooses the metric's labels on collisions
                         with target labels.
