Fix for #4560. Unable to set storage sub path for prometheus

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -7212,6 +7212,9 @@ spec:
                         - spec
                         type: object
                     type: object
+                  name:
+                    description: Subpath for /prometheus volume mount
+                    type: string
                   volumeClaimTemplate:
                     description: A PVC spec to be used by the Prometheus StatefulSets.
                     properties:
@@ -16308,6 +16311,9 @@ spec:
                         - spec
                         type: object
                     type: object
+                  name:
+                    description: Subpath for /prometheus volume mount
+                    type: string
                   volumeClaimTemplate:
                     description: A PVC spec to be used by the Prometheus StatefulSets.
                     properties:
@@ -23747,6 +23753,9 @@ spec:
                         - spec
                         type: object
                     type: object
+                  name:
+                    description: Subpath for /prometheus volume mount
+                    type: string
                   volumeClaimTemplate:
                     description: A PVC spec to be used by the Prometheus StatefulSets.
                     properties:
