--- a/example/prometheus-operator-crd/monitoring.coreos.com_prometheuses.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_prometheuses.yaml
@@ -5830,6 +5830,9 @@ spec:
                         - spec
                         type: object
                     type: object
+                  name:
+                    description: Subpath for /prometheus volume mount
+                    type: string
                   volumeClaimTemplate:
                     description: A PVC spec to be used by the Prometheus StatefulSets.
                     properties:
