--- a/bundle.yaml
+++ b/bundle.yaml
@@ -5072,8 +5072,8 @@ spec:
                         type: string
                     required:
                     - cert
-                    - insecureSkipVerify
                     - keySecret
+                    - serverCA
                     type: object
                   serverTLSConfig:
                     properties:
@@ -5199,6 +5199,7 @@ spec:
                         type: boolean
                     required:
                     - cert
+                    - clientCA
                     - keySecret
                     type: object
                 required:
