--- a/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagers.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagers.yaml
@@ -994,10 +994,11 @@ spec:
                 description: Mutual TLS for gossip
                 properties:
                   clientTLSConfig:
+                    description: Client side mutual TLS config.
                     properties:
                       cert:
-                        description: SecretOrConfigMap allows to specify data as a
-                          Secret or ConfigMap. Fields are mutually exclusive.
+                        description: Certificate for client cert authentication to
+                          the server.
                         properties:
                           configMap:
                             description: ConfigMap containing data to use for the
@@ -1039,9 +1040,11 @@ spec:
                             type: object
                         type: object
                       insecureSkipVerify:
+                        description: Disable validation of the server certificate.
                         type: boolean
                       keySecret:
-                        description: SecretKeySelector selects a key of a Secret.
+                        description: Key files for client cert authentication to the
+                          server.
                         properties:
                           key:
                             description: The key of the secret to select from.  Must
@@ -1059,8 +1062,8 @@ spec:
                         - key
                         type: object
                       serverCA:
-                        description: SecretOrConfigMap allows to specify data as a
-                          Secret or ConfigMap. Fields are mutually exclusive.
+                        description: CA certificate with which to validate the server
+                          certificate.
                         properties:
                           configMap:
                             description: ConfigMap containing data to use for the
@@ -1102,6 +1105,8 @@ spec:
                             type: object
                         type: object
                       serverName:
+                        description: Server name extension to indicate the name of
+                          the server. http://tools.ietf.org/html/rfc4366#section-3.1
                         type: string
                     required:
                     - cert
@@ -1109,10 +1114,11 @@ spec:
                     - serverCA
                     type: object
                   serverTLSConfig:
+                    description: Server side mutual TLS config.
                     properties:
                       cert:
-                        description: SecretOrConfigMap allows to specify data as a
-                          Secret or ConfigMap. Fields are mutually exclusive.
+                        description: Certificate for server to use to authenticate
+                          to client.
                         properties:
                           configMap:
                             description: ConfigMap containing data to use for the
@@ -1154,14 +1160,21 @@ spec:
                             type: object
                         type: object
                       cipherSuites:
+                        description: 'List of supported cipher suites for TLS versions
+                          up to TLS 1.2. If empty, Go default cipher suites are used.
+                          Available cipher suites are documented in the go documentation:
+                          https://golang.org/pkg/crypto/tls/#pkg-constants'
                         items:
                           type: string
                         type: array
                       clientAuthType:
+                        description: 'Server policy for client authentication. Maps
+                          to ClientAuth Policies. For more detail on clientAuth options:
+                          https://golang.org/pkg/crypto/tls/#ClientAuthType'
                         type: string
                       clientCA:
-                        description: SecretOrConfigMap allows to specify data as a
-                          Secret or ConfigMap. Fields are mutually exclusive.
+                        description: CA certificate for client certificate authentication
+                          to the server.
                         properties:
                           configMap:
                             description: ConfigMap containing data to use for the
@@ -1203,11 +1216,15 @@ spec:
                             type: object
                         type: object
                       curvePreferences:
+                        description: 'Elliptic curves that will be used in an ECDHE
+                          handshake, in preference order. Available curves are documented
+                          in the go documentation: https://golang.org/pkg/crypto/tls/#CurveID'
                         items:
                           type: string
                         type: array
                       keySecret:
-                        description: SecretKeySelector selects a key of a Secret.
+                        description: Key file for server to use to authenticate to
+                          client.
                         properties:
                           key:
                             description: The key of the secret to select from.  Must
@@ -1225,10 +1242,17 @@ spec:
                         - key
                         type: object
                       maxVersion:
+                        description: Maximum TLS version that is acceptable.
                         type: string
                       minVersion:
+                        description: Minimum TLS version that is acceptable.
                         type: string
                       preferServerCipherSuites:
+                        description: prefer_server_cipher_suites controls whether
+                          the server selects the client's most preferred ciphersuite,
+                          or the server's most preferred ciphersuite. If true then
+                          the server's preference, as expressed in the order of elements
+                          in cipher_suites, is used.
                         type: boolean
                     required:
                     - cert
