✨ feat(alertmanager): global alertmanager config (#4220)
* feat: global alertmanager config

Specify global alertmanager config name in alertmanager CRD, to aviod force namespace label in routes.

Signed-off-by: lintong.sun <lintong.sun@cloudminds.com>

* recording to pull #4441, global alertmanager config do not force namespace label in inhibitRules

Signed-off-by: lintong.sun <lintong.sun@cloudminds.com>

* fix typo and optimize docs

Signed-off-by: lintong.sun <lintong.sun@cloudminds.com>

* fix(amcfg.go):
Remove the global alertmanager config after generateGlobalConfig to avoid generating again

Signed-off-by: lintong.sun <lintong.sun@cloudminds.com>

* Add some optimizations:

1. handle error when global alertmanager config not found
2. add column for global alertmanager config in alerting.md
3. fix some doc

Signed-off-by: lintong.sun <lintong.sun@cloudminds.com>

* perf: global AlertmanagerConfig:

1.  generateGlobalConfig func just handle generate
2. add func findAndDeleteGlobalAlertmanagerConfig in operator.go
3. add unit tests for too functions above
4. fix docs as suggestions

Signed-off-by: lintong.sun <lintong.sun@cloudminds.com>

* fix as golangci lint

Signed-off-by: lintong.sun <lintong.sun@cloudminds.com>

* fix: generate global AlertmanagerConfig:

1. convertRoute update to root route
2. get global AlertmanagerConfig from k8s api
3. add rootRoute.Continue check ref alertmanager

Signed-off-by: lintong.sun <lintong.sun@cloudminds.com>

* Use user secret when AlertmanagerConfigSelector and GlobalAlertmanagerConfig are both nil

Signed-off-by: lintong.sun <lintong.sun@cloudminds.com>

* refactor Alertmanager:

1. GlobalAlertmanagerConfig -> AlertmanagerConfiguration
2. filter global AlertmanagerConfig out in selectAlertmanagerConfigs

* Move check root route into generateGlobalConfig

Signed-off-by: lintong.sun <lintong.sun@cloudminds.com>

* update some notes

* 🧪 test(alertmanager): Aler

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -4939,6 +4939,20 @@ spec:
                       are ANDed.
                     type: object
                 type: object
+              alertmanagerConfiguration:
+                description: 'EXPERIMENTAL: alertmanagerConfiguration specifies the
+                  global Alertmanager configuration. If defined, it takes precedence
+                  over the `configSecret` field. This field may change in future releases.
+                  The specified global alertmanager config will not force add a namespace
+                  label in routes and inhibitRules.'
+                properties:
+                  name:
+                    description: The name of the AlertmanagerConfig resource which
+                      holds the global configuration. It must be in the same namespace
+                      as the Alertmanager.
+                    minLength: 1
+                    type: string
+                type: object
               baseImage:
                 description: 'Base image that is used to deploy pods, without tag.
                   Deprecated: use ''image'' instead'
