--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -41,10 +41,15 @@ jobs:
     name: Golang linter
     steps:
       - uses: actions/checkout@v2
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v2
+      - name: Import environment variables from file
+        run: cat ".github/env" >> $GITHUB_ENV
+      - uses: actions/setup-go@v2
         with:
-          version: v1.40.1
+          go-version: '${{ env.golang-version }}'
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v3.1.0
+        with:
+          version: v1.44.2
           args: --timeout 10m0s
   check-metrics:
     runs-on: ubuntu-latest
