--- a/bundle.yaml
+++ b/bundle.yaml
@@ -26821,6 +26821,7 @@ rules:
   - alertmanagerconfigs
   - prometheuses
   - prometheuses/finalizers
+  - prometheuses/status
   - thanosrulers
   - thanosrulers/finalizers
   - servicemonitors
