make: Generate bundle and operator cluster role

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -26675,6 +26675,14 @@ rules:
   - get
   - list
   - watch
+- apiGroups:
+  - discovery.k8s.io
+  resources:
+  - endpointslices
+  verbs:
+  - get
+  - list
+  - watch
 ---
 apiVersion: apps/v1
 kind: Deployment
