--- a/example/prometheus-operator-crd/monitoring.coreos.com_prometheusrules.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_prometheusrules.yaml
@@ -14,6 +14,8 @@ spec:
     kind: PrometheusRule
     listKind: PrometheusRuleList
     plural: prometheusrules
+    shortNames:
+    - promrule
     singular: prometheusrule
   scope: Namespaced
   versions:
